-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.12.12, 5.15.7, 6.2.3
-
None
-
-
d34282dba0 (qt/qtbase/dev) d34282dba0 (qt/tqtc-qtbase/dev) 5d43795191 (qt/qtbase/6.3) 5d43795191 (qt/tqtc-qtbase/6.3)
QFile::copy outputs its own error strings, so it is impossible to know the actual reason the copy failed. For example
QFile f("a"); if (!f.copy("b")) return f.errorString();
returns "Failure to write block" when the actual error is "No space left on device".
| For Gerrit Dashboard: QTBUG-100867 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 396043,2 | QFile::copy: add the underlying error messages to ours | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 396166,2 | QFile::copy: add the underlying error messages to ours | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
| 396704,2 | Fix arguments of error message in QFile::copy() | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 396845,2 | Fix arguments of error message in QFile::copy() | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |